# Server-monitoring-discord-bot

./: .gitignore  GUI.py  README.md  TODO  bot.py  bot_core.py  dependencies.txt  install.bat  install.py  install.sh  restarter.py  run.bat  run.sh  service.py  smdb.service.template  smdb_api.py  update.bat  update.sh  version.py  version_creator.py  watchdog.py
API/: README.md  setup.cfg  smdb_api.py
API/smdb_api/: __init__.py
API/tests/: test.py
API/tests/data/: server.cfg
LOGGER/: README.md  create_new_api_version.bat  setup.cfg
LOGGER/smdb_logger/: __init__.py
VERSION_CONTROLL/smdb_version_controll/: __init__.py
VERSION_CONTROLL/tests/: test.py
configs/: params
connectors/: __init__.py  data_structures.py  telegramm.py
data/: bot.cfg  watchdog.cfg
modules/: __init__.py  bar.py  coordinates.py  logger.py  response.py  scanner.py  service_command_template.template  services.py  smdb_api.py  status.py  status_gatherer.py  updater.py  user.py  voice_connection.py  watchdog.py  writer.py
modules/connectors/: __init__.py  command.py  connector.py  connector_base.py  data_structures.py  discord.py  telegramm.py  user.py  voice_connection.py
templates/: service_command_template.template
