[metadata]
# replace with your username:
name = smdb_api
version = 0.12.1
author = Janthó Dávid
author_email = davidjantho@gmail.com
description = API package for Server Monitoring Discord Bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NightKey/Server-monitoring-discord-bot
project_urls =
    Bug Tracker = https://github.com/NightKey/Server-monitoring-discord-bot/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: Freeware
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7