[metadata]
# replace with your username:
name = smdb_logger
version = 0.3.6
author = Janthó Dávid
author_email = davidjantho@gmail.com
description = Logger used by Server Monitoring Discord Bot and all extentions made by me
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NightKey/Server-monitoring-discord-bot
project_urls =
    Bug Tracker = https://github.com/NightKey/Server-monitoring-discord-bot/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: Freeware
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7